@@ -34,8 +34,6 @@ import org.apache.sling.contentparser.json.JSONParserFeature;
 import org.apache.sling.contentparser.json.JSONParserOptions;
 import org.apache.sling.contentparser.json.internal.JSONContentParser;
 
-import com.google.common.collect.ImmutableSet;
-
 import io.wcm.devops.conga.generator.GeneratorException;
 import io.wcm.devops.conga.generator.util.FileUtil;
 import io.wcm.tooling.commons.contentpackagebuilder.element.ContentElement;
@@ -45,7 +43,7 @@ import io.wcm.tooling.commons.contentpackagebuilder.element.ContentElement;
  */
 public final class JsonContentLoader {
 
-  private static final Set<String> IGNORED_NAMES = ImmutableSet.of(
+  private static final Set<String> IGNORED_NAMES = Set.of(
       JcrConstants.JCR_BASEVERSION,
       JcrConstants.JCR_PREDECESSORS,
       JcrConstants.JCR_SUCCESSORS,
